<resources>
    <string name="app_name">My WatchList</string>
    <string name="app_motto">Let\'s watch together</string>
    <string name="now_showing_label">Now Showing</string>
    <string name="coming_soon_label">Coming Soon</string>
    <string name="airing_today_label">Airing Today</string>
    <string name="on_the_air_label">On The Air</string>
    <string name="top_rate_label">Top Rate</string>
    <string name="popular_label">Popular</string>
    <string name="watched_label">Watched</string>
    <string name="plan_to_watched_label">Will Watch</string>
    <string name="no_conncection">No Internet Connection</string>
    <string name="tryAgain">Try Again</string>
    <string name="noData">No Data</string>
    <string name="stillLoadingLabel">Still Loading&#8230;</string>
    <string name="genre_label">Genre</string>
    <string name="duration_label">Duration</string>
    <string name="release_date_label">Release Date</string>
    <string name="rating_label">Rating</string>
    <string name="episode_season_label">Episode/Season</string>
    <string name="available_on_label">Available On : </string>
    <string name="series_status_label">Series Status : </string>
    <string name="first_release_label">First Release</string>
    <string name="review_label">Review</string>
    <string name="video_label">Video</string>
    <string name="cast_label">Cast</string>
    <string name="crew_label">Crew</string>
    <string name="no_review_label">No Review</string>
    <string name="more_review_label">More Review</string>
    <string name="no_cast_label">No Cast</string>
    <string name="more_cast_label">More Cast</string>
    <string name="no_crew_label">No Crew</string>
    <string name="more_crew_label">More Crew</string>
    <string name="no_video_label">No Video</string>
    <string name="favorite_label">Favorite</string>
    <string name="un_favorite_label">UnFavorite</string>
    <string name="my_list_label">MyList</string>
    <string name="share_label">Share</string>
    <string name="home_label">Home</string>
    <string name="top_list_label">Top List</string>
    <string name="mylist_label">My List</string>
    <string name="library_label">Library</string>
    <string name="all_genre_movie_label">All Genre Movie</string>
    <string name="all_genre_tv_label">All Genre TV</string>
    <string name="popular_people_label">Popular People</string>
    <string name="movie_label">Movies</string>
    <string name="tv_label">TV Shows</string>
    <string name="people_label">People</string>
    <string name="settings_label">Setting</string>
    <string name="feedback_label">Send Feedback</string>
    <string name="discover_label">Discover</string>
    <string name="setting__feedback_label">Setting and Feedback</string>
    <string name="genre_movie_label">Genre Movie</string>
    <string name="genre_tv_label">Genre TV</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="birthplace_label">Place of Birth</string>
    <string name="birthday_label">Birthday</string>
    <string name="casts_label">Roles</string>
    <string name="crews_label">Filmography</string>
    <string name="movie_cast_label">Movie Casts</string>
    <string name="more_movie_cast_label">More Movie Casts</string>
    <string name="no_movie_cast_label">No Movie Cast</string>
    <string name="tv_show_casts_label">TV Show Casts</string>
    <string name="more_tv_show_casts_label">More TV Show Casts</string>
    <string name="no_tv_show_casts_label">No TV Show Cast</string>
    <string name="movie_filmography_label">Movie Filmography</string>
    <string name="more_movie_filmography_label">More Movie Filmography</string>
    <string name="no_movie_filmography_label">No Movie Filmography</string>
    <string name="tv_filmography_label">TV Filmography</string>
    <string name="more_tv_filmography_label">More TV Filmography</string>
    <string name="no_tv_filmography_label">No TV Filmography</string>
    <string name="getting_Data_notification_content_title">Getting All Data</string>
    <string name="getting_data_notification_completed">All Data has been Obtained.</string>
    <string name="getting_data_notification_still_progress">Downloading Data..</string>
    <string name="new_now_showing_notification_check_movies_action">Check them out!</string>
    <string name="new_now_showing_notification_content_title">New NowShowing Movies</string>
    <string name="new_now_showing_notification_start_content_text">Hey! There are </string>
    <string name="new_now_showing_notification_final_content_text"> new movies that showing in the theaters. Don\'t forget to watch them</string>
    <string name="new_now_showing_notification_period_update">Period Update</string>
    <string name="new_now_showing_notification_updating_movie_list">Updating movie list..</string>
    <string name="download_first_time">Downloading data</string>
    <string name="success_update_period_toas_message">Successful to set period update</string>
    <string name="fail_update_period_toas_message">Fail to set period update</string>
    <string name="success_cancel_update_period_toas_message">Successful to cancel period update</string>
    <string name="fail_cancel_update_period_toas_message">Fail to cancel period update</string>
    <string name="updates_policy_label">Updates Policy</string>
    <string name="periodic_updates_label">Periodic Updates</string>
    <string name="periodic_updates_explanation">Periodic Update will automatically update the movie list for each time, according to your settings. Make sure this app goes into exception list in all of your Battery Saver\'s apps</string>
    <string name="periodic_updates_settings_label">Periodic Updates Setting</string>
    <string name="updates_periodic_label">Updates Period</string>
    <string name="only_on_wifi">Only On Wifi</string>
    <string name="only_on_wifi_explanation">Set Period Updates to occurs only when connected to Wifi</string>
    <string name="type_notification_label">Type of Notification</string>
    <string name="updates_when_open_apps_label">Updates when Open Apps</string>
    <string name="updates_when_open_apps_explanation">Always do updates for each time you open this app</string>
    <string name="region_and_language_label">Region and Language</string>
    <string name="region_label">Region</string>
    <string name="content_language_label">Content Language</string>
    <string name="period_update_screen_key" translatable="false">period_update_screen_key</string>
    <string name="period_update_key" translatable="false">period_update_key</string>
    <string name="period_update_category_key" translatable="false">period_update_category_key</string>
    <string name="update_period_key" translatable="false">update_period_key</string>
    <string name="only_on_wifi_key" translatable="false">only_on_wifi_key</string>
    <string name="type_notification_key" translatable="false">type_notification_key</string>
    <string name="update_when_open_apps_key" translatable="false">update_when_open_apps_key</string>
    <string name="region_key" translatable="false">region_key</string>
    <string name="content_language_key" translatable="false">content_language_key</string>
    <string name="update_period_values_4_hours" translatable="false">four_hours</string>
    <string name="update_period_values_6_hours" translatable="false">six_hours</string>
    <string name="update_period_values_8_hours" translatable="false">eight_hours</string>
    <string name="update_period_values_12_hours" translatable="false">twelve_hours</string>
    <string name="update_period_values_24_hours" translatable="false">twenthy_four_hours</string>
    <string name="update_period_label_4_hours">4 Hours/Day</string>
    <string name="update_period_label_6_hours">6 Hours/Day</string>
    <string name="update_period_label_8_hours">8 Hours/Day</string>
    <string name="update_period_label_12_hours">12 Hours/Day</string>
    <string name="update_period_label_24_hours">24 Hours/Day</string>
    <string name="region_canada_label">Canada</string>
    <string name="region_china_label">China</string>
    <string name="region_england_label">England</string>
    <string name="region_france_label">France</string>
    <string name="region_germany_label">Germany</string>
    <string name="region_italy_label">Italy</string>
    <string name="region_indonesia_label">Indonesia</string>
    <string name="region_india_label">India</string>
    <string name="region_japan_label">Japan</string>
    <string name="region_netherlands_label">Netherlands</string>
    <string name="region_russia_label">Russia</string>
    <string name="region_spain_label">Spain</string>
    <string name="region_south_korea_label">South Korea</string>
    <string name="region_usa_label">United State of America</string>
    <string name="region_canada_value" translatable="false">CA</string>
    <string name="region_china_value" translatable="false">CN</string>
    <string name="region_england_value" translatable="false">GB</string>
    <string name="region_france_value" translatable="false">FR</string>
    <string name="region_germany_value" translatable="false">DE</string>
    <string name="region_italy_value" translatable="false">IT</string>
    <string name="region_indonesia_value" translatable="false">ID</string>
    <string name="region_india_value" translatable="false">IN</string>
    <string name="region_japan_value" translatable="false">JP</string>
    <string name="region_netherlands_value" translatable="false">NL</string>
    <string name="region_russia_value" translatable="false">RU</string>
    <string name="region_spain_value" translatable="false">ES</string>
    <string name="region_south_korea_value" translatable="false">KR</string>
    <string name="region_usa_value" translatable="false">US</string>
    <string name="content_language_chinese_label">Chinese</string>
    <string name="content_language_english_label">English</string>
    <string name="content_language_hindi_label">Hindi</string>
    <string name="content_language_japanase_label">Japanase</string>
    <string name="content_language_spanish_label">Spanish</string>
    <string name="content_language_chinese_value" translatable="false">zh</string>
    <string name="content_language_english_value" translatable="false">en</string>
    <string name="content_language_hindi_value" translatable="false">hi</string>
    <string name="content_language_japanase_value" translatable="false">ja</string>
    <string name="content_language_spanish_value" translatable="false">es</string>
    <string name="normal_led_notification_label">Normal (LED)</string>
    <string name="vibrate_notification_label">Vibrate</string>
    <string name="sound_notification_label">Sound</string>
    <string name="all_set_notification_label">All Set</string>
    <string name="normal_led_notification_value" translatable="false">light</string>
    <string name="vibrate_notification_value" translatable="false">vibrate</string>
    <string name="sound_notification_value" translatable="false">sound</string>
    <string name="all_set_notification_value" translatable="false">all Set</string>
    <string name="view_mode_label">Change View Layout</string>
    <string name="update_list">Update List</string>
    <string name="search_label">Search</string>
    <string name="no_movie_label">No Movie</string>
    <string name="no_tv_label">No TV</string>
    <string name="downloading_fail">Fail Downloading</string>
    <string name="downloading_fail_dialog">Downloading data has been failed because the internet connection has been lost. Do you want to try again ?</string>
    <string name="downloading_fail_notification">Downloading data has been failed</string>
    <string name="try_again">Try Again</string>
</resources>