<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="root_pref">

    <PreferenceCategory
        android:title="@string/updates_policy_label">
        <PreferenceScreen
            android:title="Period Update"
            android:key="@string/period_update_screen_key">

            <PreferenceScreen
                android:summary="@string/periodic_updates_explanation"/>

            <SwitchPreference
                android:title="@string/periodic_updates_label"
                android:key="@string/period_update_key"/>

            <PreferenceCategory
                android:title="@string/periodic_updates_settings_label"
                android:key="@string/period_update_category_key"
                android:enabled="false">

                <ListPreference
                    android:title="@string/updates_periodic_label"
                    android:key="@string/update_period_key"
                    android:summary="6 Hours each day"
                    android:entryValues="@array/updates_period_values"
                    android:entries="@array/updates_period_label"/>

                <SwitchPreference
                    android:title="@string/only_on_wifi"
                    android:key="@string/only_on_wifi_key"
                    android:summary="@string/only_on_wifi_explanation"
                    />

                <ListPreference
                    android:title="@string/type_notification_label"
                    android:key="@string/type_notification_key"
                    android:summary="@string/normal_led_notification_value"
                    android:entries="@array/notification_type_label"
                    android:entryValues="@array/notification_type_value"
                    android:defaultValue="@string/normal_led_notification_value"/>

            </PreferenceCategory>
        </PreferenceScreen>

        <SwitchPreference
            android:title="@string/updates_when_open_apps_label"
            android:key="@string/update_when_open_apps_key"
            android:summary="@string/updates_when_open_apps_explanation"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/region_and_language_label">

        <ListPreference
            android:title="@string/region_label"
            android:key="@string/region_key"
            android:defaultValue="@string/region_usa_value"
            android:summary="USA"
            android:entries="@array/region_label"
            android:entryValues="@array/region_values"/>

        <ListPreference
            android:title="@string/content_language_label"
            android:key="@string/content_language_key"
            android:defaultValue="@string/content_language_english_value"
            android:summary="English"
            android:entries="@array/content_language_label"
            android:entryValues="@array/content_language_value"/>

    </PreferenceCategory>
</PreferenceScreen>