<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/movie_drawer_item_menu"
            android:icon="@drawable/ic_movie_black_24px"
            android:title="@string/movie_label"/>
        <item android:id="@+id/tv_drawer_item_menu"
            android:icon="@drawable/ic_tv_black_24px"
            android:title="@string/tv_label"/>
        <item android:title="@string/discover_label">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/genre_movie_drawer_item_menu"
                        android:icon="@drawable/ic_movie_filter_black_24px"
                        android:title="@string/genre_movie_label"/>

                    <item
                        android:id="@+id/genre_tv_drawer_item_menu"
                        android:icon="@drawable/ic_live_tv_black_24px"
                        android:title="@string/genre_tv_label"/>

                    <item
                        android:id="@+id/people_drawer_item_menu"
                        android:icon="@drawable/ic_people_black_24px"
                        android:title="@string/people_label"/>
                </group>
            </menu>
        </item>
        <item android:title="@string/setting__feedback_label">
            <menu>
                <group android:checkableBehavior="none">
                    <item
                        android:id="@+id/setting_drawer_item_menu"
                        android:icon="@drawable/ic_settings_black_24px"
                        android:title="@string/settings_label"/>
                    <item
                        android:id="@+id/feedback_drawer_item_menu"
                        android:icon="@drawable/ic_feedback_black_24px"
                        android:title="@string/feedback_label"/>
                </group>
            </menu>
        </item>
    </group>
</menu>
