<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_movie_list_item_menu"
        android:icon="@drawable/ic_home_white_24px"
        android:title="@string/home_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_list_movie_list_item_menu"
        android:icon="@drawable/ic_trending_up_white_24px"
        android:title="@string/top_list_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/library_movie_list_item_menu"
        android:icon="@drawable/ic_library_books_white_24px"
        android:title="@string/library_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/yours_movie_list_item_menu"
        android:icon="@drawable/ic_people_white_24px"
        android:title="@string/yours_label"
        app:showAsAction="ifRoom" />
</menu>